# ruff

./: Cargo.toml  README.md
docs/: Installation.md  Usage.md  lang_specs.md
examples/: README.md
examples/erc20/: ERC20.ruff
examples/erc721/: ERC721.ruff
examples/utils/: Address.ruff  HashMap.ruff  Ownable.ruff  Utils.ruff
src/: compiler.rs  context.rs  error.rs  file.rs  lib.rs  macros.rs  main.rs  opcodes.rs  parser.rs  value.rs
tests/: compile_fail.rs  compile_success.rs  erc20.rs  new_erc20.rs  new_erc721.rs  util.rs
